# kag

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  config.sample.toml  flake.nix
examples/config/: benchmark.sample.toml  config.sample.toml
examples/dataset/: dataset.sample.json
examples/prompt/: umls_prompt.md
nix/: package.nix
src/: config.rs  main.rs
src/cli/: benchmark.rs  completion.rs  component.rs  generation.rs  mod.rs  stats.rs
src/cli/stats/: find.rs  mod.rs
src/generation/: config.rs  mod.rs
src/retrieval/: mod.rs
src/retrieval/database/: mod.rs
src/retrieval/database/neo4j/: mod.rs  translation.rs
src/subcommand/: mod.rs
src/subcommand/benchmark/: README.md  config.rs  dataset.rs  mod.rs  result.rs
src/subcommand/generation/: README.md  mod.rs
src/subcommand/stats/: README.md  metric.rs  mod.rs
src/subcommand/stats/subcommand/: mod.rs
src/subcommand/stats/subcommand/find/: README.md  mod.rs
