[package]
name = "kag"
version = "0.1.0"
edition = "2024"
authors = ["c2fc2f <contact@c2fc2f.com>"]
description = "A comprehensive toolkit for Knowledge Graph Enhanced Retrieval-Augmented Generation (KAG), featuring generation pipelines and evaluation benchmarks"
readme = "README.md"
repository = "https://github.com/c2fc2f/KAG"
license = "MIT"
keywords = [
    "knowledge-graph",
    "rag",
    "generation",
    "benchmark",
    "neo4j"
]
categories = [
    "command-line-utilities",
    "database",
    "development-tools::evaluation"
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[dependencies]
clap = { version = "4", features = [ "derive" ] }
clap-verbosity-flag = "3"
clap-stdin = "0.8"
serde = { version = "1", features = [ "derive" ] }
toml = "1"
minijinja = "2"
env_logger = "0.11"
log = "0.4"
anyhow = "1"
