[package]
name = "kag"
version = "0.1.0"
edition = "2024"
authors = ["c2fc2f <contact@c2fc2f.com>"]
description = "A comprehensive toolkit for Knowledge Graph Enhanced Retrieval-Augmented Generation (KAG), featuring generation pipelines and evaluation benchmarks"
readme = "README.md"
repository = "https://github.com/c2fc2f/kag"
license = "MIT"
keywords = [
  "knowledge-graph",
  "rag",
  "generation",
  "benchmark",
  "neo4j"
]
categories = [
  "command-line-utilities",
  "database",
  "development-tools::evaluation"
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[dependencies]
clap = { version = "4", features = [ "derive" ] }
clap-verbosity-flag = "3"
clap-stdin = "0.8"
clap_complete = "4"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
toml = "1"
minijinja = { version = "2", features = [ "custom_syntax" ] }
env_logger = "0.11"
log = "0.4"
anyhow = "1"
rig-core = "0.40"
tokio = { version = "1.0", features = [ "full" ] }
tokio-util = { version = "0.7", features = [ "io-util" ] }
neo4rs = "0.8"
futures = "0.3"
async-stream = "0.3"
hashbrown = { version = "0.17", features = [ "serde" ] }
itertools = "0.15"
rustls = { version = "0.23", features = [ "ring" ] }
regex = "1"

[build-dependencies]
clap = { version = "4", features = [ "derive", "string" ] }
clap_mangen = "0.3"
clap-verbosity-flag = "3"
clap-stdin = "0.8"
clap_complete = "4"
serde = { version = "1", features = [ "derive" ] }
regex = "1"

